@@ -8,8 +8,8 @@
         <version>3.1.3</version>
     </parent>
     <groupId>de.orciument</groupId>
-    <artifactId>Talium-Bot</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>TaliumBot</artifactId>
+    <version>1</version>
     <name>Talium</name>
     <description>Talium, a Java Twitch Bot</description>
     <properties>
@@ -125,6 +125,14 @@
                     <source>21</source>
                     <target>21</target>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
